# LnC-2-Arrow

./: .gitignore  assignment-arrow.cabal  open-questions.md  readme.md  readme.txt
app/: Main.hs
examples/: AddInput2.space
src/: Algebra.hs  Interpreter.hs  Lexer.hs  Lexer.x  Main  Main.hs  Model.hs  Parser.hs  Parser.y
